# vla

./: .gitignore  README.md  action_extractor.py  config.yaml  conftest.py  evaluate.py  langgap_loader.py  pyproject.toml  requirements.txt  run_both.py  run_cross_probe.py  run_vlm_probe.py  smoke_test.py  synthetic.py  test_data.py  test_extractor.py  test_probe.py  train.py  vlm_extractor.py
results/: smoke_ae_results.json  smoke_vlm_results.json
vla_probe.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
